Dynegy/src/objects/DASR_Request__c.object
<CustomObject>
    <fields>
        <fullName>Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>This field is created for handling Utlity Initiated Changes</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Method__c</fullName>
        <description>Rate Ready
DUAL</description>
        <label>Bill Method</label>
        <picklist>
            <picklistValues>
                <fullName>Bill Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DUAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBO/ESP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Entity__c</fullName>
        <globalPicklist>Billing_Entity</globalPicklist>
        <label>Billing Entity</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP_Node__c</fullName>
        <description>This field is created during the iAve conversion.</description>
        <label>CP Node</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_Obligation__c</fullName>
        <label>Capacity Obligation Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Effective_Date__c</fullName>
        <label>Change Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Reason_Code__c</fullName>
        <label>Change Reason Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Reason_Value__c</fullName>
        <label>Change Reason Value</label>
        <picklist>
            <controllingField>Change_Reason__c</controllingField>
            <picklistValues>
                <fullName>Rate Ready LDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Ready LDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separate Bills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDC Rate Codes specific to LDC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Reason__c</fullName>
        <label>Change Reason</label>
        <picklist>
            <controllingField>Billing_Entity__c</controllingField>
            <picklistValues>
                <fullName>Change Billing Type (Billing Option)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change ESP Rate Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Service Indicator (Summary or Detail Interval Data)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Aggregation Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>change Billing Type (Bill Presenter)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Consumers Tax Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change E/M Fixed Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of ESP Rate Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Party that Calculates the Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change ESP Account Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Interval Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Percentage of Service Tax Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Rate Ready ESP Bill Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Mailing Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_Name__c</fullName>
        <label>City Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Bill_Method__c</fullName>
        <formula>TEXT(Contract__r.Bill_Method__c)</formula>
        <label>Contract Bill Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Counter_Signed_Date__c</fullName>
        <formula>Contract__r.Contract_Counter_Signed_Date__c</formula>
        <label>Contract Counter Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Contract__r.End_Date__c</formula>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Interval_Usage__c</fullName>
        <formula>TEXT(Contract__r.Interval_Usage__c)</formula>
        <label>Contract Interval Usage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Rate_Code__c</fullName>
        <formula>Contract__r.Rate_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Rate Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Contract__r.StartDate</formula>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>DASR Requests</relationshipLabel>
        <relationshipName>DASR_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <formula>LDC_Account__r.Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DASR_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DASR Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DASR_Submit_Date__c</fullName>
        <label>DASR Submit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DASR_Type__c</fullName>
        <label>DASR Type</label>
        <picklist>
            <picklistValues>
                <fullName>GAAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAAH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_between__c</fullName>
        <formula>Change_Effective_Date__c -  DATEVALUE(DASR_Submit_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drop_Date__c</fullName>
        <label>Drop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drop_Reason_Code__c</fullName>
        <label>Drop Reason Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_Reason_Description__c</fullName>
        <label>Drop Reason Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_Reason__c</fullName>
        <label>Drop Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Alleged Slam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Changed to another Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Enrolled In An Arrearage Crediting Program - PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Enrolled In Utility Percent of Income Payment Plan - PIPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer is on Credit Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Moved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped by Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Aggregated customer has opted out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Terminated at the ESP&apos;s Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Terminated Or Customer dropped due to nonpayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped - dropped by supplier for reasons other than nonpayment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dynegy_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dynegy Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESB_Transaction_Id__c</fullName>
        <label>ESB Transaction Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESP_Account_Number__c</fullName>
        <label>ESP Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_Switch_Date__c</fullName>
        <description>This field is created during the iAve conversion</description>
        <label>Eligible Switch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exception_Type_Code__c</fullName>
        <label>Exception Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_18__c</fullName>
        <formula>UPPER(CASESAFEID(Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <label>Integration Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Send_Date__c</fullName>
        <description>Date to be sent to utility</description>
        <label>Integration Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting For Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manually Fulfilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interval_Level_Indicator__c</fullName>
        <description>This field is created during the iAve Conversion.</description>
        <label>Interval Level Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Daily AMI Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly AMI Data</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interval_Usage__c</fullName>
        <label>Interval Usage</label>
        <picklist>
            <picklistValues>
                <fullName>Interval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDC_Account_Number__c</fullName>
        <label>LDC Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LDC Account</label>
        <referenceTo>LDC_Account__c</referenceTo>
        <relationshipName>DASRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LDC_Bill_Cycle__c</fullName>
        <label>LDC Bill Cycle</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Budget_Billing_Status__c</fullName>
        <description>This field is created during iAve Conversion.</description>
        <label>LDC Budget Billing Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_EDI_Update_Date__c</fullName>
        <label>Last EDI Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Line_Transaction_Id__c</fullName>
        <label>Line Transaction Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Exception_Reason_Code__c</fullName>
        <label>Meter Exception Reason Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Exception_Reason_Description__c</fullName>
        <label>Meter Exception Reason Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Exception_Type_Code__c</fullName>
        <label>Meter Exception Type Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Number__c</fullName>
        <label>Meter Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_GAAD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created to Check whether the DASR is most recent one or not</description>
        <label>Most Recent DASR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Qualifier__c</fullName>
        <label>Name Qualifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Meter_Type__c</fullName>
        <description>This field is created during the iAve conversion for storing the net metering indicator.</description>
        <label>Net Meter Type</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM-BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM-GG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM-GL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XY</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_Of_Months_Usage_Quantity__c</fullName>
        <label>Number Of Months Usage Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OFF_Cycle_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created during the iAve Conversion for the Off cycle Enrollments which would be done manually</description>
        <label>OFF Cycle Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_LDC_Account_Number__c</fullName>
        <label>Old LDC Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_DUNS__c</fullName>
        <formula>LDC_Account__r.Account__r.Supplier__r.Supplier_DUNS__c</formula>
        <label>Originator DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Name__c</fullName>
        <formula>LDC_Account__r.Account__r.Supplier__r.Name</formula>
        <label>Originator Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POR_Group__c</fullName>
        <description>This field is created during the iAve conversion</description>
        <label>POR Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Arrangement_Code__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Payment Arrangement Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peak_Demand__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Peak Demand</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>This field is created while handling Utility Initiated Changes GAAC</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Zip__c</fullName>
        <label>Postal Code Zip</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Code__c</fullName>
        <label>Rate Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Description__c</fullName>
        <label>Reason Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Rejected_Desc__c</fullName>
        <label>Reason Rejected Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Rejected__c</fullName>
        <label>Reason Rejected</label>
        <picklist>
            <picklistValues>
                <fullName>Account not found or invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action Code Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change reason missing or invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer is not the customer of the Requestor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer on Credit Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DUNS Number Invalid or Not Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESI ID/Account exists but not active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESP acct invalid/missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Bill Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Service Delivery Point Identifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Source of Information/does not provide requested service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Code Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Number Invalid or Not found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participating Interest Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested Rate Not Found</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recipient_DUNS__c</fullName>
        <formula>LDC_Account__r.LDC_Vendor__r.DUNS__c</formula>
        <label>Recipient DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <formula>LDC_Account__r.LDC_Vendor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sender_Transaction_Id__c</fullName>
        <label>Sender Transaction Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Point__c</fullName>
        <description>This field is created for the iAve Conversion</description>
        <label>Service Point</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Relationship__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Service Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Meter_Configuration__c</fullName>
        <description>This field is created to handle the net metering</description>
        <label>Special Meter Configuration</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETMETER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_Point_Location_Code__c</fullName>
        <description>This field is created during the iAve conversion.</description>
        <label>Standard Point Location Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateMapPLI__c</fullName>
        <formula>IF(OR(ISPICKVAL(LDC_Account__r.Service_Territory__c, &apos;DEOHIO&apos;),ISPICKVAL(LDC_Account__r.Service_Territory__c, &apos;DAYTON&apos;), ISPICKVAL(LDC_Account__r.Service_Territory__c, &apos;AEPOHIO&apos;), ISPICKVAL(LDC_Account__r.Service_Territory__c, &apos;FEOHIO&apos;)) , &apos;OH&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StateMapPLI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province_Code__c</fullName>
        <label>State Province Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_ID__c</fullName>
        <formula>LDC_Account__r.Account__r.Supplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supply_Group__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Supply Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_KWH_Quantity__c</fullName>
        <label>Total KWH Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_JSON__c</fullName>
        <label>Transaction JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transmission_Obligation_Quantity__c</fullName>
        <label>Transmission Obligation Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility_Initiated_Change_Reason_Activity__c</fullName>
        <label>Utility Initiated Change Reason Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned Service End Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned Service Start Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Calculator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Bill Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Bill Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change AEP&apos;s SDP Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Aggregation Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Billing Type (Billing Option)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Bill Presenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Customer Billing Period (Bimonthly/Monthly)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Distribution Loss Factor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Energy Supplier Budget Billing Status (First Energy Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Bill/Mail Name and/or Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Customer Name and/or Service Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in party to receive copy of bills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in party to receive copy of notices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change LDC Account Number for Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change LDC Billing Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change LDC Rate Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change LDC Rate Subclass Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Meter Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Meter Multiplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Meter Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Network Service Peak Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Number of Dials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Peak Load Contribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Scheduling Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Special Meter Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Strata or Load Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Supply Voltage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Validation_Failed__c</fullName>
        <formula>IF(ISPICKVAL(Integration_Status__c,&quot;Validation Failed&quot;),true,false)</formula>
        <label>Validation Failed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Message__c</fullName>
        <label>Validation Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Id__c</fullName>
        <formula>LDC_Account__r.LDC_Vendor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Id</label>
        <type>Text</type>
    </fields>
    <label>DASR Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DASR_Type__c</columns>
        <columns>LDC_Account__c</columns>
        <columns>Rate_Code__c</columns>
        <columns>DASR_Submit_Date__c</columns>
        <columns>Contract__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Change_Reason_Blank</fullName>
        <columns>NAME</columns>
        <columns>DASR_Type__c</columns>
        <columns>Change_Reason__c</columns>
        <columns>Change_Reason_Code__c</columns>
        <columns>Contract__c</columns>
        <columns>Validation_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Integration_Send_Date__c</columns>
        <columns>Reason_Rejected__c</columns>
        <columns>Reason_Rejected_Desc__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DASR_Type__c</field>
            <operation>equals</operation>
            <value>GAAC</value>
        </filters>
        <filters>
            <field>Change_Reason__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Dynegy_Initiated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Change Reason Blank</label>
    </listViews>
</CustomObject>